--- a/anchor-programs/movie-review-program/Anchor.toml
+++ b/anchor-programs/movie-review-program/Anchor.toml
@@ -3,6 +3,7 @@
 [features]
 resolution = true
 skip-lint = false
+seeds = true
 
 [programs.localnet]
 movie_review_program = "5wwi4x7YMaGLfoy1VkKt7mtGoqsokQT5d8jT5YVbfobc"
