--- a/anchor-programs/movie-review-program/programs/movie-review-program/Cargo.toml
+++ b/anchor-programs/movie-review-program/programs/movie-review-program/Cargo.toml
@@ -17,6 +17,6 @@ no-log-ix-name = []
 idl-build = ["anchor-lang/idl-build"]
 
 [dependencies]
-anchor-lang = "0.30.0"
+anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
 anchor-spl = "0.30.0"
 mpl-token-metadata = "4.1.2"
